--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -108,6 +108,17 @@
         app:layout_constraintTop_toBottomOf="@id/likeButtonBarrier"
         tools:text="@sample/posts.json/data/likes" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/imgbShare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="@+id/imgbLiked"
+        app:layout_constraintStart_toEndOf="@+id/imgbLiked"
+        app:layout_constraintTop_toBottomOf="@+id/likeButtonBarrier"
+        app:icon="@drawable/ic_baseline_share_24"
+        style="@style/Widget.AppTheme.ShareCheckBox" />
+
 
 
 
